# cpp_modern_development_red_belt

./: CMakeLists.txt  Makefile
.github/workflows/: cmake.yaml
cmake/modules/: FindClangFormat.cmake  clang-format.cmake
src/: CMakeLists.txt
src/profile/: CMakeLists.txt  profile.cpp  profile.h
src/test_runner/: CMakeLists.txt  test_runner.h
src/week_1/: CMakeLists.txt
src/week_1/bad_macro/: CMakeLists.txt  bad_macro.cpp
src/week_1/deque/: CMakeLists.txt  deque.h  deque_test.cpp
src/week_1/log/: CMakeLists.txt  log.cpp
src/week_1/paginator/: CMakeLists.txt  paginator.cpp
src/week_1/sort_by/: CMakeLists.txt  airline_ticket.h  sort_by.cpp
src/week_1/table/: CMakeLists.txt  table.cpp
src/week_1/uniq_id/: CMakeLists.txt  uniq_id.cpp
src/week_1/update_field/: CMakeLists.txt  update_field.cpp
src/week_2/: CMakeLists.txt
src/week_2/booking/: CMakeLists.txt  main.cpp
src/week_2/compare_students/: CMakeLists.txt  sort_students.cpp  student.h
src/week_2/ebook/: CMakeLists.txt  slow.cpp
src/week_2/expresses/: CMakeLists.txt  slow.cpp
src/week_2/learner/: CMakeLists.txt  learner.cpp
